[#110] build for IntelliJ EAP