@@ -18,6 +18,54 @@ dependencies {
     testImplementation libs.scalatest
 }
 
+tasks.withType(ScalaCompile) {
+    scalaCompileOptions.forkOptions.with {
+        jvmArgs = [
+                '--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
+                '--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED',
+                '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
+                '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
+                '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
+                '--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED',
+                '--add-opens=java.desktop/javax.swing.plaf.synth=ALL-UNNAMED',
+                '--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED',
+                '--add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED',
+                '--add-opens=java.desktop/sun.awt.im=ALL-UNNAMED',
+                '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
+                '--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED',
+                '--add-opens=java.desktop/com.sun.beans.editors=ALL-UNNAMED',
+                '--add-opens=java.desktop/sun.swing=ALL-UNNAMED',
+                '--add-opens=java.desktop/sun.awt.im=ALL-UNNAMED',
+                '--add-opens=java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED',
+                '--add-opens=java.desktop/com.apple.eio=ALL-UNNAMED',
+                '--add-opens=java.management/sun.management=ALL-UNNAMED'
+
+        ]
+    }
+}
+
+test {
+    jvmArgs = [
+            '--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
+            '--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED',
+            '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
+            '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
+            '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
+            '--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED',
+            '--add-opens=java.desktop/javax.swing.plaf.synth=ALL-UNNAMED',
+            '--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED',
+            '--add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED',
+            '--add-opens=java.desktop/sun.awt.im=ALL-UNNAMED',
+            '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
+            '--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED',
+            '--add-exports=java.desktop/com.sun.beans.editors=ALL-UNNAMED',
+            '--add-exports=java.desktop/sun.swing=ALL-UNNAMED',
+            '--add-exports=java.desktop/sun.awt.im=ALL-UNNAMED',
+            '--add-exports=java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED',
+            '--add-exports=java.desktop/com.apple.eio=ALL-UNNAMED'
+    ]
+}
+
 intellij {
     pluginName = 'intellij-cucumber-scala'
     version = "${versions.idea}"
@@ -37,8 +85,8 @@ runIde {
 }
 
 patchPluginXml {
-    sinceBuild = "222.3345"
-    untilBuild = "222.*"
+    sinceBuild = "223.7571"
+    untilBuild = "223.*"
 }
 
 buildSearchableOptions.enabled = false
